@@ -859,6 +859,16 @@ end</example>
 				<ref>currentsong</ref>
 			</seealso>
 		</command>
+		<command id="setmusicvolume">
+			<cannon>set music volume (volume)</cannon>
+			<shortname>set music volume</shortname>
+			<description>Sets the volume at which music is played, volume being a number on the scale of 0 to 15, 0 being silent, 15 loudest. If you want to manipulate the sound (e.g. fading out the music) you should take note of the original vulume that the player has set and return to this. By default volume is not maximum, so you should not hardcode fades to begin at volume 15.</description>
+		</command>
+		<command id="getmusicvolume">
+			<cannon>get music volume</cannon>
+			<shortname>get music volume</shortname>
+			<description>Returns the volume at which music is played, on a scale of 0 to 15, 0 being silent, 15 loudest.</description>
+		</command>
 		<command id="fadescreenout">
 			<cannon>fade screen out (red,green,blue)</cannon>
 			<shortname>fade screen out</shortname>
